changed background picture to colorado mountains for branding

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -36,7 +36,7 @@
      <div class="container">
        <div class="project view-first">
 
-       <img class="img" src="/images/publications-angular.png" alt="">
+       <img class="img" src="/images/publications.png" alt="">
        <div class="mask">
          <h2>publications-angular</h2>
          <!-- <p>Type: Galvanize Final Assessment</p> -->
