fixing phone screen size layout

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1090,7 +1090,6 @@ th {
 
   .navigation a {
     text-align: center;
-    padding: 10px;
     border-top: 1px solid rgba(255,255,255,0.3);
     border-bottom: 1px solid rgba(0,0,0,0.1);
   }
@@ -1100,6 +1099,10 @@ th {
   }
   .nav {
     display: none;
+  }
+  h1 {
+    margin-top: 75px;
+    width: 80%;
   }
 }
 
