--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -361,8 +361,9 @@ section.module.parallax-1 {
   z-index: -100;
   /*background-image: url("/images/chicago_2048.jpg");*/
   background-image: url("/images/coloradoSunrise.jpg");
-  /*background-image: url("/images/colorado2.jpg");
-  background-image: url("/images/colorado3.jpg");*/
+  /*background-image: url("/images/colorado2.jpg");*/
+  /*background-image: url("/images/colorado-dallas.jpg");*/
+
 }
 
 /* section.module.parallax-2 {
@@ -503,8 +504,8 @@ body {
   z-index: -100;
   background-color: #c7d1ea;
   background-image: url("/images/coloradoSunrise.jpg");
-  /*background-image: url("/images/colorado2.jpg");
-  background-image: url("/images/colorado3.jpg");*/
+  /*background-image: url("/images/colorado-dallas.jpg");*/
+
   height: 600px;
   background-position: 50% 50%;
   background-repeat: no-repeat;
