fixed footer issue with hamburger responsivenes

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -71,15 +71,13 @@
 
  <main>
    <footer>
-     <nav>
        <li>Hillary Shannon Skye</li>
        <li>720-218-6389</li>
        <li>skyeinc9@gmail.com</li>
        <a class="show" href="http://www.linkedin.com/in/hillaryskye"><i class="show fa fa-linkedin"></i></a>
        <a class="github show" href="https://github.com/hillaryskye/">&nbsp;<i class="show fa fa-github"></i></a>
        <a class="show" href="https://whispering-dusk-7423.herokuapp.com/"><i class="show fa fa-bicycle">&nbsp;</i>Portfolio</a>
-     </nav>
-     <nav class="title">Front-end Developer</nav>
+     <div class="title">Front-end Developer</div>
 
    </footer>
  </main>
