--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -158,6 +158,7 @@ img:after {
   top: 20px;
   left: 50px;
   margin-top: -20px;
+  padding-left: 25px;
   width: 80%;
   /*height: 360px;*/
   min-height: 315px;
@@ -436,7 +437,6 @@ label {
   a {
     display: block;
     float: left;
-    margin-left: 50px;
     border-radius: 5px;
     padding: 7px 10px;
     color: #af0a0a;
