added skills page content

--- a/public/partials/skills.html
+++ b/public/partials/skills.html
@@ -1,1 +1,93 @@
 <h1>Skills Page</h1>
+
+<section>
+<div class="container">
+    <div class="project">
+      <div class="mask2">
+        <h2>Full Stack Web Development</h2>
+        <ul>
+          <li>Web services (REST, XML, JSON)</li>
+          <li>API Integration</li>
+          <li>Google, Facebook API Oauth Integration</li>
+          <li>API backend creation in Node/ MongoDB</li>
+          <li>Full web application custom creation</li>
+          <li>Experience with using RDBMS such as MySQL and or SQL Server</li>
+          <li>git version control</li>
+          <li>Terminal</li>
+          <li>Handlebars/ Mustache</li>
+          <li>asp.net</li>
+          <li>Ruby</li>
+        </ul>
+      </div>
+    </div>
+</div>
+</section>
+
+<section>
+<div class="container">
+    <div class="project">
+      <div class="mask2">
+        <h2>Web Development</h2>
+        <ul>
+          <li>Javascript</li>
+          <li>HTML5 and CSS3</li>
+          <li>JS MVC frameworks: Angular.js</li>
+          <li>MongoDB and PostgresSQL</li>
+          <li>Node.js and Express</li>
+          <li>Unit testing/ TDD development</li>
+        </ul>
+      </div>
+    </div>
+</div>
+</section>
+
+<section>
+<div class="container">
+    <div class="project">
+      <div class="mask2">
+        <h2>Front-end Development</h2>
+        <ul>
+          <li>eCommerce: SparkPay (Americommerce)</li>
+          <li>Responsive web design</li>
+          <li>Hover roll-overs</li>
+          <li>Hamburger menu for responsive on small screens</li>
+          <li>Navigation headers</li>
+          <li>Scrolling navigation styling changes</li>
+          <li>Flexbox</li>
+          <li>jQuery</li>
+          <li>Bootstrap framework</li>
+          <li>Sass pre-processor</li>
+          <li>Illustrator, Photoshop and InDesign Adobe/ Creative Suite</li>
+          <li>User experience</li>
+          <li>WordPress</li>
+        </ul>
+        </div>
+  </div>
+</div>
+</section>
+
+<section>
+  <div class="container">
+    <div class="project">
+      <div class="mask2">
+        <h2>Other Skills</h2>
+        <ul>
+          <li>Project management</li>
+          <li>Entrepreneurial</li>
+          <li>Team work/ Team building</li>
+          <li>Event planning/ marketing</li>
+          <li>Social media marketing (SEO)</li>
+          <li>Sales</li>
+          <li>Impressive oral and written communication skills</li>
+          <li>An ability to work on multiple projects simultaneously</li>
+          <li>Effective at working as part of a team</li>
+          <li>Strong problem solving skills</li>
+          <li>An individual prone to take initiative</li>
+          <li>Passionate about staying up to date on technology/ software</li>
+        </ul>
+      </div>
+
+    </div>
+
+  </div>
+</section>
