--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -42,17 +42,6 @@ main {
   display: table;
   clear: both; }
 
-/* Phones ----------- */
-@media only screen and (max-width: 767px) {
-  p {
-    font-size: 18px; } }
-
-/* Tablets ----------- */
-@media only screen and (min-width: 768px) {
-  /* CSS Styles */
-  p {
-    font-size: 16px; } }
-
 /* -------- COLUMN LAYOUTS -------*/
 /* -- Column Sizes -- */
 .one-fourth {
@@ -158,10 +147,18 @@ img:after {
   top: 20px;
   left: 50px;
   margin-top: -20px;
-  padding-left: 25px;
+  /*padding-left: 25px;*/
   width: 80%;
   /*height: 360px;*/
   min-height: 315px;
+}
+.project .mask2 {
+  background-color: rgba(245,245,220, 0.9);
+  overflow: hidden;
+  margin-top: -20px;
+  margin-left: 50px;
+  width: 87%;
+  min-height: 420px;
 }
 .project .img {
     display: block;
@@ -268,15 +265,12 @@ img:after {
   position: relative;
   padding-bottom: 45px;
   padding-top: 45px;
-    /*width: 100%;*/
-    /*height: 100%;*/
-    /*display: flex;
-    flex-direction: column;
-    justify-content: flex-start; /* align items in Main Axis */
-/*
-    align-items: stretch; /* align items in Cross Axis */
-/*
-    align-content: stretch; /* Extra space in Cross Axis */*/
+  border-top: 1px solid rgba(255,255,255,0.3);
+  border-bottom: 1px solid rgba(0,0,0,0.1);
+}
+.project2 {
+  float: none;
+  margin: 0 auto;
 }
 
 .project:after {
@@ -460,7 +454,6 @@ header nav {
   top: 0;
   right: 0;
   background: rgba(255, 255, 255, .7);
-  /*background: rgba(255,255,9, .4);*/
   padding: 25px;
   width: 100%;
   z-index: 1;
@@ -557,7 +550,7 @@ article {
   float: left;
   height: 25px; }
 
-p {
+p, ul li {
   /*color: white;*/
   color: #114fe0;
   float: left;
@@ -574,6 +567,10 @@ p:after {
 p:hover {
   color: #114fe0; }
 
+ul li {
+  font-size: 1.1em;
+  width: 80%;
+}
 h1, h2, h3, h4 {
   font-weight: inherit;
   line-height: 1.2; }
