added contact page

--- a/public/partials/contact.html
+++ b/public/partials/contact.html
@@ -1,1 +1,14 @@
-<h1>Contact Page</h1>
+<!-- <h1>Contact Page</h1> -->
+
+<main>
+  <footer class="footer">
+      <li>Hillary Shannon Skye</li>
+      <li>720-218-6389</li>
+      <li>skyeinc9@gmail.com</li>
+      <a class="show" href="http://www.linkedin.com/in/hillaryskye"><i class="show fa fa-linkedin"></i></a>
+      <a class="github show" href="https://github.com/hillaryskye/">&nbsp;<i class="show fa fa-github"></i></a>
+      <a class="show" href="https://whispering-dusk-7423.herokuapp.com/"><i class="show fa fa-bicycle">&nbsp;</i>Portfolio</a>
+    <div class="title">Front-end Developer</div>
+
+  </footer>
+</main>
