--- a/public/partials/skills.html
+++ b/public/partials/skills.html
@@ -7,12 +7,13 @@
           <li>Web services (REST, XML, JSON)</li>
           <li>API Integration</li>
           <li>Google, Facebook API Oauth Integration</li>
+          <li>Unit testing/ TDD development</li>
           <li>Experience with using RDBMS such as MySQL and or SQL Server</li>
           <li>git version control</li>
+          <li>Jira and Trello</li>
+          <li>eCommerce: SparkPay (Americommerce)</li>
           <li>Terminal</li>
-          <li>Handlebars/ Mustache</li>
-          <li>asp.net</li>
-          <li>Ruby</li>
+          <li>Technical Customer Service</li>
         </ul>
       </div>
     </div>
@@ -30,7 +31,11 @@
           <li>JS MVC frameworks: Angular.js</li>
           <li>MongoDB and PostgresSQL</li>
           <li>Node.js and Express</li>
-          <li>Unit testing/ TDD development</li>
+          <li>Handlebars/ Mustache</li>
+          <li>asp.net</li>
+          <li>Ruby</li>
+          <li>jQuery</li>
+          <li>WordPress</li>
         </ul>
       </div>
     </div>
@@ -43,19 +48,16 @@
       <div class="mask2">
         <h2>Front-end Development</h2>
         <ul>
-          <li>eCommerce: SparkPay (Americommerce)</li>
           <li>Responsive web design</li>
           <li>Hover roll-overs</li>
           <li>Hamburger menu for responsive on small screens</li>
           <li>Navigation headers</li>
           <li>Scrolling navigation styling changes</li>
           <li>Flexbox</li>
-          <li>jQuery</li>
           <li>Bootstrap framework</li>
-          <li>Sass pre-processor</li>
+          <li>Sass preprocessor</li>
           <li>Illustrator, Photoshop and InDesign Adobe/ Creative Suite</li>
           <li>User experience</li>
-          <li>WordPress</li>
         </ul>
         </div>
   </div>
@@ -70,15 +72,13 @@
         <ul>
           <li>Project management</li>
           <li>Entrepreneurial</li>
-          <li>Team work/ Team building</li>
+          <li>Team work/ Personal growth/ Takes initiative</li>
           <li>Event planning/ marketing</li>
           <li>Social media marketing (SEO)</li>
           <li>Sales</li>
           <li>Impressive oral and written communication skills</li>
-          <li>An ability to work on multiple projects simultaneously</li>
           <li>Effective at working as part of a team</li>
           <li>Strong problem solving skills</li>
-          <li>An individual prone to take initiative</li>
           <li>Passionate about staying up to date on technology/ software</li>
         </ul>
       </div>
