--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -111,6 +111,9 @@ main {
 .href {
   display: block;
 }
+.href a {
+  margin-left: 25px;
+}
 
 .href:after {
   content: "";
@@ -158,7 +161,7 @@ img:after {
   margin-top: -20px;
   margin-left: 50px;
   width: 87%;
-  min-height: 450px;
+  min-height: 360px;
 }
 .project .img {
     display: block;
@@ -573,7 +576,7 @@ p:hover {
 
 ul li {
   font-size: 1.1em;
-  width: 80%;
+  width: 100%;
 }
 h1, h2, h3, h4 {
   font-weight: inherit;
