--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -86,10 +86,7 @@ main {
   text-align: center;
   border: 3px solid #114fe0;
   margin-top: 100px;
-  padding-top: 20px;
-  padding-bottom: 14px;
-  /*padding-right: 20px;
-  padding-left: 20px;*/
+  padding: 15px;
   }
 /*
 .border {
