--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,6 +4,31 @@
   -webkit-box-sizing: border-box;
 }
 
+/*@keyframes go {
+  from {
+    motion-offset: 0%;
+  }
+  to {
+    motion-offset: 100%;
+  }
+}*/
+#path {
+  position: absolute;
+  top: 40px;
+  left: 0px;
+  width: 100%;
+}
+/*#text {
+  motion-path: path('M198.1,72.6c0.3-4.1,3.9-7.2,8-6.9c5.1,0.4,9,4.8,8.6,9.9c-0.5,6.4-6,11.2-12.4,10.8
+	c-8-0.6-14-7.5-13.5-15.5c0.7-10,9.4-17.5,19.4-16.8c12.5,0.9,21.9,11.8,21,24.3c-1.1,15.6-14.7,27.4-30.3,26.3
+	c-19.5-1.4-34.3-18.4-32.9-37.9c1.7-24.4,23-42.8,47.4-41.1c28.5,2,40.6,20.1,34.6,52.6c-2.7,12.9-6.1,25.6-9.1,38.5
+	c-4.8,20.6-5.6,46,3,55.2c14.5,15.6,38.9,16.4,54.5,1.9');
+  animation-name: go;
+  animation-duration: 8s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}*/
+
 section {
   margin: 0 auto;
 }
@@ -261,18 +286,18 @@ img:after {
 .view-first:hover h2 {
     transition-delay: 0.2s;
 }
-/*.mask {
-    flex: 1; /* same as flex: 1 1 auto; */
-    /*
+/*.mask {*/
+    /*flex: 1; */
+    /* same as flex: 1 1 auto; 
     display: flex;
     flex-direction: column;
     justify-content: flex-start; /* align items in Main Axis */
-/*
-    align-items: stretch; /* align items in Cross Axis */
-/*
-    align-content: stretch; /* Extra space in Cross Axis */
-}/*
-*/
+
+    /*align-items: stretch;  align items in Cross Axis */
+
+    /*align-content: stretch;  Extra space in Cross Axis */
+/*}*/
+
 .text-align {
   padding-right: 20px;
   text-align: right;
@@ -298,11 +323,10 @@ img:after {
   display: table;
   clear: both;
 }
-/*.flexbox-item-grow
-{
-    flex: 1; /* same as flex: 1 1 auto; */
-}/*
-*/
+/*.flexbox-item-grow*/
+/*{*/
+    /*flex: 1;  same as flex: 1 1 auto; */
+/*}*/
 .fa {
   font-size: 1.5em;
   color: #af0a0a; }
