--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -50,10 +50,11 @@
 </text>
 </svg>-->
 
-<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 1000 250" style="enable-background:new 0 0 1000 250;" xml:space="preserve">
+<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+	 viewBox="0 0 1000 250" class="border-name" style="enable-background:new 0 0 1000 250;" xml:space="preserve">
 <style type="text/css">
-	.st0{fill:#AF0A0A;}
+  .st0{fill:#AF0A0A;}
+  <!-- .st0{fill:none;} -->
 	.st1{fill:#FFFFFF;}
 	.st2{font-family:'Raleway-Bold';}
 	.st3{font-size:150px;}
@@ -61,27 +62,33 @@
 	.st5{fill:none;stroke:#000000;stroke-width:4;stroke-miterlimit:10;}
 	.st6{font-family:'ArialMT';}
 	.st7{font-size:12px;}
-	.st8{display:none;fill:none;stroke:#000000;stroke-width:3;stroke-miterlimit:10;}
+	.st8{display:none;fill:none;stroke:yellow;stroke-width:3;stroke-miterlimit:10;}
 	.st9{display:none;fill:none;stroke:#40005C;stroke-miterlimit:10;}
-	.st10{display:none;}
+  .st10{fill:none; background:none;}
+  .st11{fill:none;}
 
 </style>
-<rect class="st0" width="1000" height="250"/>
-<text transform="matrix(1 0 0 1 74.675 171.9564)" class="st1 st2 st3">Hillary Skye</text>
-<rect x="189.8" y="61.4" class="st0" width="30.9" height="22.6"/>
-<path id="SVGID_x5F_1_x5F_" class="st5" d="M198.1,72.6c0.3-4.1,3.9-7.2,8-6.9c5.1,0.4,9,4.8,8.6,9.9c-0.5,6.4-6,11.2-12.4,10.8
+<!-- red rectangle -->
+<rect id="rect" class="st10" width="1000" height="500"/>
+<text id="name" transform="matrix(1 0 0 1 74.675 171.9564)" class="st1 st2 st3" stroke-dasharray="1200 1000">Hillary Skye</text>
+<!-- dot on i in Hillary is set to be red to be invisible -->
+<rect id="dot" x="189.8" y="61.4" class="st10" width="30.9" height="22.6"/>
+<!-- spiral svg -->
+<g id="spiralGroup">
+<path id="spiral" class="st5" d="M198.1,72.6c0.3-4.1,3.9-7.2,8-6.9c5.1,0.4,9,4.8,8.6,9.9c-0.5,6.4-6,11.2-12.4,10.8
 	c-8-0.6-14-7.5-13.5-15.5c0.7-10,9.4-17.5,19.4-16.8c12.5,0.9,21.9,11.8,21,24.3c-1.1,15.6-14.7,27.4-30.3,26.3
 	c-19.5-1.4-34.3-18.4-32.9-37.9c1.7-24.4,23-42.8,47.4-41.1c28.5,2,40.6,20.1,34.6,52.6c-2.7,12.9-6.1,25.6-9.1,38.5
-	c-4.8,20.6-5.6,46,3,55.2c14.5,15.6,38.9,16.4,54.5,1.9"/>
+	c-4.8,20.6-5.6,46,3,55.2c14.5,15.6,38.9,16.4,54.5,1.9"/> 
 
-<text id="text">
-	<textPath  xlink:href="#SVGID_x5F_1_x5F_" startOffset="71.3942%">
-
-		<!--<animateTransform attributeName="transform" from="0" to="10" dur="8s"/>-->
-		<tspan  class="st4" style="font-family:'MyriadPro-Regular'; font-size:25px;">Shannon</tspan>
-		<animateMotion attributeName="startOffset" dur="8s" repeatCount="indefinite" />
-</textPath>
+<text class="text">
+	<textPath id="shannon" xlink:href="#spiral" startOffset="71.3942%">
+      <animate attributeName="startOffset" dur="4s" from="0" to="500" repeatCount="indefinite" />
+		<!-- <animateTransform attributeName="transform" from="0" to="10" dur="8s"/> -->
+    <tspan  class="st4" style="font-family:'MyriadPro-Regular'; font-size:25px;">Shannon</tspan>
+  </textPath>
+  
 </text>
+</g>
 
 </svg>
 <!--<object type="image/svg+xml" id="text" data="images/newLogo.svg"></object>-->
