--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,30 +4,78 @@
   -webkit-box-sizing: border-box;
 }
 
-/*@keyframes go {
-  from {
-    motion-offset: 0%;
+/* #dot {
+  display: none;
+} */
+
+/* .border-name {
+  padding: 20px;
+  border: 10px solid #fff;
+} */
+
+#name {
+  fill: #fff;
+  stroke: #fff;
+}
+
+#name {
+  /* motion-path: path('M198.1,72.6c0.3-4.1,3.9-7.2,8-6.9c5.1,0.4,9,4.8,8.6,9.9c-0.5,6.4-6,11.2-12.4,10.8
+	c-8-0.6-14-7.5-13.5-15.5c0.7-10,9.4-17.5,19.4-16.8c12.5,0.9,21.9,11.8,21,24.3c-1.1,15.6-14.7,27.4-30.3,26.3
+	c-19.5-1.4-34.3-18.4-32.9-37.9c1.7-24.4,23-42.8,47.4-41.1c28.5,2,40.6,20.1,34.6,52.6c-2.7,12.9-6.1,25.6-9.1,38.5
+	c-4.8,20.6-5.6,46,3,55.2c14.5,15.6,38.9,16.4,54.5,1.9');*/
+  stroke-width: 0;
+  animation: go 2s linear infinite;
+}
+
+@keyframes go {
+  0% {
+    stroke-width: 1pt;
+    stroke-dashoffset: 1200;
+    fill-opacity: 0;
   }
-  to {
-    motion-offset: 100%;
+  50% {
+    fill-opacity: 0;
   }
-}*/
+  100% {
+    stroke-dashoffset: 0;
+    fill-opacity: 1;
+    stroke-width: 0pt;
+  }
+}
+
+#rect {
+  /* motion-path: path('M198.1,72.6c0.3-4.1,3.9-7.2,8-6.9c5.1,0.4,9,4.8,8.6,9.9c-0.5,6.4-6,11.2-12.4,10.8
+	c-8-0.6-14-7.5-13.5-15.5c0.7-10,9.4-17.5,19.4-16.8c12.5,0.9,21.9,11.8,21,24.3c-1.1,15.6-14.7,27.4-30.3,26.3
+	c-19.5-1.4-34.3-18.4-32.9-37.9c1.7-24.4,23-42.8,47.4-41.1c28.5,2,40.6,20.1,34.6,52.6c-2.7,12.9-6.1,25.6-9.1,38.5
+	c-4.8,20.6-5.6,46,3,55.2c14.5,15.6,38.9,16.4,54.5,1.9');*/
+  stroke-width: 0;
+  animation: rect 2s linear infinite;
+}
+
+@keyframes rect {
+  0% {
+    stroke-width: 1pt;
+    stroke-dashoffset: 1200;
+    fill-opacity: 0;
+  }
+  80% {
+    fill-opacity: 0;
+  }
+  100% {
+    stroke-dashoffset: 0;
+    fill-opacity: 1;
+    stroke-width: 0pt;
+    /* fill: #af0a0a; */
+    fill: #993f3d;
+  }
+}
+
 #path {
   position: absolute;
   top: 40px;
   left: 0px;
   width: 100%;
 }
-/*#text {
-  motion-path: path('M198.1,72.6c0.3-4.1,3.9-7.2,8-6.9c5.1,0.4,9,4.8,8.6,9.9c-0.5,6.4-6,11.2-12.4,10.8
-	c-8-0.6-14-7.5-13.5-15.5c0.7-10,9.4-17.5,19.4-16.8c12.5,0.9,21.9,11.8,21,24.3c-1.1,15.6-14.7,27.4-30.3,26.3
-	c-19.5-1.4-34.3-18.4-32.9-37.9c1.7-24.4,23-42.8,47.4-41.1c28.5,2,40.6,20.1,34.6,52.6c-2.7,12.9-6.1,25.6-9.1,38.5
-	c-4.8,20.6-5.6,46,3,55.2c14.5,15.6,38.9,16.4,54.5,1.9');
-  animation-name: go;
-  animation-duration: 8s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-}*/
 
 section {
   margin: 0 auto;
@@ -109,7 +157,8 @@ main {
   color: #af0a0a;
   font-weight: bold;
   text-align: center;
-  border: 3px solid #114fe0;
+  /* border: 3px solid #114fe0; */
+  border: 3px solid #fff;
   margin-top: 100px;
   padding: 15px;
   }
