--- a/public/partials/designs.html
+++ b/public/partials/designs.html
@@ -1,12 +1,3 @@
-<h1>Designs Page</h1>
-
-
-<h2>hello</h2>
-       <!-- <div class="project view-first" ng-repeat="design in designs">
-        
-           <h2>{{design.name}}</h2>
-          </div> -->
-
           <section id="startchange" class="module parallax parallax-1">
                 <div class="container"></div>
               </section>
@@ -14,13 +5,13 @@
                 <section class="module content">
                    <div class="container">
                      <div class="project view-first" ng-repeat="design in designs">
-                       <img class="img" src="/images/{{design.name}}.png" alt="">
+                       <img class="img" src="/images/{{design.image}}.png" alt="">
                        <div class="mask">
-                         <h2>{{design.name}}</h2>
-                         <!-- <p>Type: {{design.type}}</p> -->
+                         <h2>Name: {{design.name}}</h2>
+                         <p>Type: {{design.type}}</p>
                          <p class="desc">Description: {{design.desc}}</p>
                          <div class="href">
-                           <a ng-href="{{design.url}}"><i class="{{design.icon}}"> </i>&nbsp;{{design.name}}</a>
+                           <a ng-href="{{design.codepen}}"><i class="{{design.icon}}"> </i>&nbsp;{{design.name}}</a>
                            <a ng-href="{{design.github}}"><i class="fa fa-github"></i>&nbsp;github: {{design.name}}</a>
                          </div>
                          </div>
