changed first logo photo

--- a/public/partials/designs.html
+++ b/public/partials/designs.html
@@ -7,7 +7,7 @@
                      <div class="project view-first" ng-repeat="design in designs">
                        <img class="img" src="/images/{{design.image}}.png" alt="">
                        <div class="mask">
-                         <h2>Name: {{design.name}}</h2>
+                         <h2>{{design.name}}</h2>
                          <p>Type: {{design.type}}</p>
                          <p class="desc">Description: {{design.desc}}</p>
                          <div class="href">
