--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,15 +16,12 @@
 #name {
   fill: #fff;
   stroke: #fff;
+  /* fill: #eac230c9; */
 }
 
 #name {
-  /* motion-path: path('M198.1,72.6c0.3-4.1,3.9-7.2,8-6.9c5.1,0.4,9,4.8,8.6,9.9c-0.5,6.4-6,11.2-12.4,10.8
-	c-8-0.6-14-7.5-13.5-15.5c0.7-10,9.4-17.5,19.4-16.8c12.5,0.9,21.9,11.8,21,24.3c-1.1,15.6-14.7,27.4-30.3,26.3
-	c-19.5-1.4-34.3-18.4-32.9-37.9c1.7-24.4,23-42.8,47.4-41.1c28.5,2,40.6,20.1,34.6,52.6c-2.7,12.9-6.1,25.6-9.1,38.5
-	c-4.8,20.6-5.6,46,3,55.2c14.5,15.6,38.9,16.4,54.5,1.9');*/
   stroke-width: 0;
-  animation: go 2s linear infinite;
+  animation: go 8s linear infinite;
 }
 
 @keyframes go {
@@ -32,22 +29,29 @@
     stroke-width: 1pt;
     stroke-dashoffset: 1200;
     fill-opacity: 0;
+    fill: #fff;
   }
   50% {
     fill-opacity: 0;
+    fill: #fff;
+  }
+  80% {
+    stroke-dashoffset: 0;
+    fill-opacity: 1;
+    stroke-width: 0pt;
+    fill: #fff;
   }
   100% {
     stroke-dashoffset: 0;
     fill-opacity: 1;
     stroke-width: 0pt;
+    /* fill: #eac230c9;
+    fill: #af0a0a; */
+    fill: #af0a0adb;
   }
 }
 
 #rect {
-  /* motion-path: path('M198.1,72.6c0.3-4.1,3.9-7.2,8-6.9c5.1,0.4,9,4.8,8.6,9.9c-0.5,6.4-6,11.2-12.4,10.8
-	c-8-0.6-14-7.5-13.5-15.5c0.7-10,9.4-17.5,19.4-16.8c12.5,0.9,21.9,11.8,21,24.3c-1.1,15.6-14.7,27.4-30.3,26.3
-	c-19.5-1.4-34.3-18.4-32.9-37.9c1.7-24.4,23-42.8,47.4-41.1c28.5,2,40.6,20.1,34.6,52.6c-2.7,12.9-6.1,25.6-9.1,38.5
-	c-4.8,20.6-5.6,46,3,55.2c14.5,15.6,38.9,16.4,54.5,1.9');*/
   stroke-width: 0;
   animation: rect 2s linear infinite;
 }
@@ -66,7 +70,8 @@
     fill-opacity: 1;
     stroke-width: 0pt;
     /* fill: #af0a0a; */
-    fill: #993f3d;
+    /* fill: #993f3d; */
+
   }
 }
 
@@ -335,17 +340,6 @@ img:after {
 .view-first:hover h2 {
     transition-delay: 0.2s;
 }
-/*.mask {*/
-    /*flex: 1; */
-    /* same as flex: 1 1 auto; 
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start; /* align items in Main Axis */
-
-    /*align-items: stretch;  align items in Cross Axis */
-
-    /*align-content: stretch;  Extra space in Cross Axis */
-/*}*/
 
 .text-align {
   padding-right: 20px;
@@ -1186,11 +1180,9 @@ th {
   }
 }
 @media (Max-width: 1500px) {
-  .project .mask {
-    /*min-height: 360px;*/
-  }
-  .project {
-    /*padding-bottom: 60px;*/
+ 
+  #designs {
+    min-height: 300px;
   }
 }
 @media(Max-width:1225px){
