Added wireframe pics and details for design pages

--- a/public/partials/about.html
+++ b/public/partials/about.html
@@ -1,1 +1,33 @@
-<h1>About Page</h1>
+<main>
+        <div class="container">
+            <div id="center-box" class="project">
+              <div class="mask2">
+                <h2>Junior Front End UI/ UX Web Developer</h2>
+                <p>Hillary loves living in Colorado and enjoys hiking, road biking and playing Irish Trad music.  She graduated Metro State University of Denver in 2014 in Web Development and Business Intelligence.  Hillary enjoys coding Front End with Angular, HTML, CSS & Javascript.  She has experience with wireframing too using Balsamiq and Axure. Her experience is of a morph between a Front End Web Developer and a designer. After pursuing businesses in differeing industries, Hillary also brings many skills into the scope of her skills base and understands the importance of working as part of a team. </p>
+              </div>
+            </div>
+        </div>
+    </main>
+        
+        <!-- <section>
+        <div class="container">
+            <div class="project">
+              <div class="mask2">
+                <h2>Front-end Development</h2>
+                <ul>
+                  <li>Responsive web design</li>
+                  <li>Hover roll-overs</li>
+                  <li>Hamburger menu for responsive on small screens</li>
+                  <li>Navigation headers</li>
+                  <li>Scrolling navigation styling changes</li>
+                  <li>Flexbox</li>
+                  <li>Bootstrap framework</li>
+                  <li>Sass preprocessor</li>
+                  <li>Illustrator, Photoshop and InDesign Adobe/ Creative Suite</li>
+                  <li>User experience</li>
+                </ul>
+                </div>
+          </div>
+        </div>
+        </section> -->
+        
