--- a/public/partials/designs.html
+++ b/public/partials/designs.html
@@ -11,8 +11,8 @@
                          <p>Type: {{design.type}}</p>
                          <p class="desc">Description: {{design.desc}}</p>
                          <div class="href">
-                           <a ng-href="{{design.codepen}}"><i class="{{design.icon}}"> </i>Codepen</a>
-                           <a ng-href="{{design.details}}"><i class="fa fa-github"></i>Details</a>
+                           <a ng-href="{{design.codepen}}"><i class="fa fa-codepen"> </i> Codepen</a>
+                           <a ng-href="{{design.details}}"><i class="{{design.icon}}"></i> Details</a>
                          </div>
                          </div>
                      </div>
