--- a/public/partials/designs/portfolioLogo1.html
+++ b/public/partials/designs/portfolioLogo1.html
@@ -8,10 +8,9 @@
         <ul>
           <li>SVG Text on a Path using SMIL</li>
           <li>Spiral design using Adobe Illustrator</li>
-          <li>Adding a circle </li>
-          <li>Heroku deployment</li>
-          <li>git version control</li>
-          <li>Responsive Web Design</li>
+          <li>Adding all necessary svg componenets in order to replicate "Shannon" as a rollercoaster in the logo name. </li>
+          <li>Using Inspect Element with CSS to ensure getting expected results</li>
+          <li>Student of learning with SVG, coding and Web Design via the Web</li>
         </ul>
       </div>
     </div>
