--- a/public/partials/designs/portfolioLogo2.html
+++ b/public/partials/designs/portfolioLogo2.html
@@ -8,10 +8,10 @@
         <ul>
           <li>SVG Text on a Path using SMIL</li>
           <li>Spiral design using Adobe Illustrator</li>
-          <li>Adding a circle </li>
-          <li>Heroku deployment</li>
-          <li>git version control</li>
-          <li>Responsive Web Design</li>
+          <li>Add CSS Keyframes to move drawing of logo name</li>
+          <li>Adjusted coloring to make logo more cohesive and less loud</li>
+          <li>Removed background color red to make drawing of logo name more impactful and subtle</li>
+          
         </ul>
       </div>
     </div>
