fixed responsive to site and added 2 more pages for wireframing for design pages

--- a/public/partials/designs/portfolioLogo1.html
+++ b/public/partials/designs/portfolioLogo1.html
@@ -1,9 +1,10 @@
-<h3>Portfolio Logo 1st Generation</h3>
+<div class="center-box4"><img class="center-box2" src="/images/portfolioLogo12.png" alt=""></div>
+
 
 <section>
 <div class="container">
-    <div class="project">
-      <div class="mask2 mask3">
+    <div id="center-box" class="project">
+      <div id="center-box3" class="mask2 mask3">
         <h2>Porfolio Logo Design First Generation - Technologies Used</h2>
         <ul>
           <li>SVG Text on a Path using SMIL</li>
@@ -12,18 +13,6 @@
           <li>Using Inspect Element with CSS to ensure getting expected results</li>
           <li>Student of learning with SVG, coding and Web Design via the Web</li>
         </ul>
-      </div>
-    </div>
-</div>
-</section>
-
-<section>
-<div class="container">
-    <div id="details" class="project">
-      <div class="mask2 mask3">
-        <h2>Portfolio Logo Design - Description</h2>
-        <p class="desc">This is the first generation of the Portfolio Logo using SVG with text on a path animation.
-        </p>
       </div>
     </div>
 </div>
