--- a/public/partials/designs/portfolioLogo2.html
+++ b/public/partials/designs/portfolioLogo2.html
@@ -1,10 +1,10 @@
-<h3>Portfolio Logo 2nd Generation</h3>
+<div class="center-box4"><img class="center-box2" src="/images/portfolioLogo22.png" alt=""></div>
 
 <section>
 <div class="container">
-    <div class="project">
-      <div class="mask2 mask3">
-        <h2>Porfolio Logo Design 2nd Generation - Technologies Used</h2>
+    <div id="center-box" class="project">
+      <div id="center-box3" class="mask2 mask3">
+        <h2>Portfolio Logo Design 2nd Generation - Technologies Used</h2>
         <ul>
           <li>SVG Text on a Path using SMIL</li>
           <li>Spiral design using Adobe Illustrator</li>
@@ -21,11 +21,10 @@
 <section>
 <div class="container">
     <div id="details" class="project">
-      <div class="mask2 mask3">
-        <h2>Portfolio Logo Design - Description</h2>
-        <p class="desc">This is the 2nd generation of the Portfolio Logo using SVG with text on a path animation.
-        </p>
-      </div>
+      <div class="mask2 mask3 padding-top20">
+        
+      <img src="/images/portfolioLogo22.png" alt="">
+    </div>
     </div>
 </div>
 </section>
