--- a/public/partials/designs/wireframe2.html
+++ b/public/partials/designs/wireframe2.html
@@ -1,11 +1,9 @@
-<div class="center-box4"><img class="center-box2" src="/images/wireframe2.png" alt=""></div>
-
-
+<div class="center-box4"><img class="center-box2" src="/images/wireframe21.png" alt=""></div>
 <section>
 <div class="container">
     <div id="center-box" class="project">
       <div id="center-box3" class="mask2 mask3">
-        <h2>Wireframe Example #1 - Technologies Used</h2>
+        <h2>Wireframe Work Example #1 - Technologies Used</h2>
         <ul>
           <li>Built in Axure</li>
           <li>Part of redesign team for widgets for whole project</li>
