--- a/public/partials/designs/wireframe3.html
+++ b/public/partials/designs/wireframe3.html
@@ -1,17 +1,14 @@
-<div class="center-box4"><img class="center-box2" src="/images/wireframe3.png" alt=""></div>
-
-
+<div class="center-box4"><img class="center-box2" src="/images/wireframe31.png" alt=""></div>
 <section>
 <div class="container">
     <div id="center-box" class="project">
       <div id="center-box3" class="mask2 mask3">
-        <h2>Porfolio Logo Design First Generation - Technologies Used</h2>
-        <ul>
-          <li>SVG Text on a Path using SMIL</li>
-          <li>Spiral design using Adobe Illustrator</li>
-          <li>Adding all necessary svg componenets in order to replicate "Shannon" as a rollercoaster in the logo name. </li>
-          <li>Using Inspect Element with CSS to ensure getting expected results</li>
-          <li>Student of learning with SVG, coding and Web Design via the Web</li>
+        <h2>Wireframe Work Example #2 - Technologies Used</h2>        <ul>
+          <li>Built in Axure</li>
+          <li>Part of redesign team for widgets for whole project</li>
+          <li>Getting pixel perfect wireframe developed from mockups by lead team members</li>
+          <li>Many of the design choices were developed by me</li>
+          <li>Axure wireframing and very interactive rather than a simple Balsamiq wireframe acting like a webapp should showing functionality</li>
         </ul>
       </div>
     </div>
