--- a/public/partials/about.html
+++ b/public/partials/about.html
@@ -3,7 +3,7 @@
             <div id="center-box" class="project">
               <div class="mask2">
                 <h2>Junior Front End UI/ UX Web Developer</h2>
-                <p>Hillary loves living in Colorado and enjoys hiking, road biking and playing Irish Trad music.  She graduated Metro State University of Denver in 2014 in Web Development and Business Intelligence.  Hillary enjoys coding Front End with Angular, HTML, CSS & Javascript.  She has experience with wireframing too using Balsamiq and Axure. Her experience is of a morph between a Front End Web Developer and a designer. After pursuing businesses in differeing industries, Hillary also brings many skills into the scope of her skills base and understands the importance of working as part of a team. </p>
+                <p class="about">Hillary loves living in Colorado and enjoys hiking, road biking and playing Irish Trad music.  She graduated Metro State University of Denver in 2014 in Web Development and Business Intelligence.  Hillary enjoys coding Front End with Angular, HTML, CSS & Javascript.  She has experience with wireframing too using Balsamiq and Axure. Her experience is of a morph between a Front End Web Developer and a designer. After pursuing businesses in differeing industries, Hillary also brings many skills into the scope of her skills base and understands the importance of working as part of a team. </p>
               </div>
             </div>
         </div>
